@@ -61,6 +61,8 @@ Version 1.4.6:
 		malicious BBCode.
 	Improved build and added CSS autoprefixer.
 		- Thanks to @Gazenwagen for improving
+	Added Czech translation
+		- Thanks to Daniel Vítek for translating
 
 Version 1.4.5:
 	Added command shortcuts to tooltips.
